# encoding_rs_rw

./: Cargo.toml  README.md
benches/: normal.rs  replace.rs  text_ja.txt
src/: buffer.rs  bufwriter.rs  error.rs  lib.rs  reader.rs  util.rs  writer.rs
src/tests/: ja.rs  mod.rs
