[package]
name = "encoding_rs_rw"
version = "0.2.1"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "std::io::{Read, Write} wrappers for encoding_rs"
repository = "https://github.com/LiosK/encoding_rs_rw"
keywords = ["encoding", "unicode", "charset", "io"]
categories = [
  "api-bindings",
  "encoding",
  "internationalization",
  "text-processing",
]

[dependencies]
encoding_rs = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
